# camera

./: CMakeLists.txt  README.md  org.kde.camera.appdata.xml  org.kde.camera.desktop
debian/: changelog  control  copyright  plasma-camera.postinst
po/zh_CN/: Camera.po
src/: CMakeLists.txt  CameraPhotosModel.cpp  CameraPhotosModel.h  camerautils.cpp  camerautils.h  main.cpp  resources.qrc
src/contents/ui/: AboutPage.qml  BlurBackgroundView.qml  BrightnessZoom.qml  CameraPage.qml  CameraPageRight.qml  FocusRing.qml  GlobalDrawer.qml  PreviewArea.qml  ZoomControl.qml  main.qml
